# sr25519-embedded-c

./: .gitignore  Cargo.toml  README.md
.cargo/: config
cortex/: libsr.h  libsr_wrapper.c  main.c  sr_test.h
cortex/GCC/: gcc_arm.ld  startup_ARMCM3.c
qemu/: Cargo.toml  README.md
qemu/src/: main.rs
src/: api.rs  device.rs  exrng.rs  lib.rs  wrapper.rs
