[package]
name = "sr25519-embedded-c"
authors = ["chester"]
edition = "2018"
readme = "README.md"
version = "0.0.1"

[lib]
name = "sr"
path = "src/lib.rs"
crate-type = ["staticlib"]

[dependencies]
schnorrkel = {version="0.8.5", default-features = false}
rand_core = {version = "0.4.2"}
exrng = {version = "0.1.2"}

[profile.release]
codegen-units = 1 # better optimizations
debug = true # symbols are nice and they don't increase the size on Flash
lto = true # better optimizations
opt-level = 3

[features]
default = ["schnorrkel/u32_backend"]
embedded = ["schnorrkel/u32_backend"]