[package]
name = "sr25519-embedded-c"
authors = ["chester <chester@pixelauth.com>"]
edition = "2018"
readme = "README.md"
version = "0.1.0"
license = "MIT/Apache-2.0"
repository = "https://github.com/wookong-dot/sr25519-embedded-c.git"
documentation = "https://docs.rs/sr25519-embedded-c"
keywords = ["schnorrkel", "Rng-free", "embedded", "arm", "none-os"]
categories = ["algorithms", "no-std"]
description = "C bindings of sr25519 for embedded device"
exclude = [ ".gitignore", "TESTVECTORS", "res/*" ]

[lib]
name = "sr"
path = "src/lib.rs"
crate-type = ["staticlib"]

[dependencies]
schnorrkel = {version="0.8.5", default-features = false}
rand_core = {version = "0.1.0"}
exrng = {version = "0.1.2"}

[profile.release]
codegen-units = 1 # better optimizations
debug = true # symbols are nice and they don't increase the size on Flash
lto = true # better optimizations
opt-level = 3

[features]
default = ["schnorrkel/u32_backend"]
embedded = ["schnorrkel/u32_backend"]