[package]
authors = ["chester"]
edition = "2018"
readme = "README.md"
name = "cortexm"
version = "0.1.0"

[dependencies]
cortex-m = "0.6.0"
cortex-m-rt = "0.6.8"
cortex-m-semihosting = "0.3.3"
panic-halt = "0.2.0"
alloc-cortex-m = "0.3.5"
schnorrkel = {version="0.8.5", default-features = false}
rand_chacha = {version="0.1",default-features = false,optional = true}
rand_core = {version = "0.4.2",default-features = false}

[profile.release]
codegen-units = 1 # better optimizations
debug = true # symbols are nice and they don't increase the size on Flash
lto = true # better optimizations
opt-level = 3

[features]
default = ["schnorrkel/u32_backend"]