[package]
authors = ["chester"]
edition = "2018"
readme = "README.md"
name = "cortexm"
version = "0.1.0"

[dependencies]
cortex-m = "0.6.0"
cortex-m-rt = "0.6.8"
cortex-m-semihosting = "0.3.3"
panic-halt = "0.2.0"
alloc-cortex-m = "0.3.5"
rand_core = {version = "0.4.2",default-features = false}
sr25519-embedded-c = {path="../../sr25519-embedded-c"}

[profile.release]
codegen-units = 1 # better optimizations
debug = true # symbols are nice and they don't increase the size on Flash
lto = true # better optimizations
opt-level = 3

[features]
